--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ html, body {
   box-sizing: border-box;
   text-decoration: none;
   list-style-type: none;
-  border: 1px solid black;
 }
 
 #navbar {
@@ -141,12 +140,10 @@ html, body {
   align-items: center;
   flex: 1;
   margin-top: 1.6rem;
-  border: 1px solid red;
   margin: 1.2rem auto;
 }
 .intro .item {
   font-size: 1.2rem;
-  border: 1px solid red;
 }
 .intro .item span {
   margin-left: 0.6rem;
@@ -189,20 +186,55 @@ section.product {
 section.product:nth-child(2) {
   flex-direction: row-reverse;
 }
+section.product:nth-child(1) .Pic img {
+  width: 50%;
+  height: 50%;
+  border-radius: 0;
+}
 section.product .Pic {
   width: 30%;
   height: 30%;
   border-radius: 0;
-  border: 1px solid red;
   text-align: center;
 }
 section.product .Pic img {
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
   border-radius: 0;
 }
 section.product .Content {
   width: 50%;
   height: 50%;
   border-radius: 0;
+}
+
+footer {
+  width: 100%;
+  height: 50vh;
+  border-radius: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+footer .info {
+  width: 80%;
+  height: 80%;
+  border-radius: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  flex: 1;
+}
+footer .brands {
+  width: 100%;
+  height: 10vh;
+  border-radius: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 1rem;
+  line-height: 1rem;
 }
